--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,61 @@
-numpy==1.24.3
+anaconda-client==1.11.1
+anaconda-navigator==2.4.0
+backports.weakref==1.0.post1
+brotlipy==0.7.0
+cachetools==5.3.0
+charset-normalizer==3.1.0
+clyent==1.2.2
+cmake==3.26.1
+conda==23.3.1
+conda-build==3.23.3
+conda-repo-cli==1.0.41
+conda-verify==3.4.2
+filelock==3.10.7
+ftfy==6.1.1
+iopath==0.1.10
+joblib==1.2.0
+jsonpointer==2.1
+layoutparser==0.3.4
+lit==16.0.0
+MarkupSafe==2.1.2
+mpmath==1.3.0
+navigator-updater==0.3.0
+networkx==3.0
+numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-ml-py==11.525.112
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+nvitop==1.1.2
 opencv-python==4.7.0.72
+pandas==2.0.1
 pdf2image==1.16.3
-Pillow==9.5.0
-tqdm==4.65.0
-uuid==1.30
+pdfminer.six==20221105
+pdfplumber==0.9.0
+Pillow==9.4.0
+ply==3.11
+portalocker==2.7.0
+PyQt5-sip==12.11.0
+regex==2023.3.23
+requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
+sklearn==0.0.post1
+sympy==1.11.1
+termcolor==2.2.0
+threadpoolctl==3.1.0
+torch==2.0.0
+torchvision==0.15.1
+triton==2.0.0
+typing_extensions==4.5.0
+tzdata==2023.3
+Wand==0.6.11
+wcwidth==0.2.6
