--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,90 @@
+absl-py==1.4.0
+antlr4-python3-runtime==4.9.3
 beautifulsoup4==4.12.2
 bs4==0.0.1
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+cloudpickle==2.2.1
+cmake==3.26.3
+contourpy==1.0.7
 cryptography==40.0.2
+cycler==0.11.0
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@4aca4bdaa9ad48b8e91d7520e0d0815bb8ca0fb1
+filelock==3.12.0
+fonttools==4.39.3
+future==0.18.3
+fvcore==0.1.3.post20210317
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+grpcio==1.54.0
 idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
 iopath==0.1.10
+Jinja2==3.1.2
+kiwisolver==1.4.4
 layoutparser==0.3.4
+lit==16.0.2
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mpmath==1.3.0
+networkx==3.1
 numpy==1.24.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+omegaconf==2.3.0
 opencv-python==4.7.0.72
+packaging==23.1
 pandas==2.0.1
 pdf2image==1.16.3
 pdfminer.six==20221105
 pdfplumber==0.9.0
 Pillow==9.5.0
 portalocker==2.7.0
+protobuf==4.22.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycocotools==2.0.6
 pycparser==2.21
+pydot==1.4.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
 requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
 scipy==1.10.1
 six==1.16.0
 soupsieve==2.4.1
+sympy==1.11.1
+tabulate==0.9.0
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+termcolor==2.3.0
+torch==2.0.0
+torchvision==0.15.1
 tqdm==4.65.0
+triton==2.0.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
 uuid==1.30
 Wand==0.6.11
+Werkzeug==2.3.0
+yacs==0.1.8
+zipp==3.15.0
