--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ pycocotools==2.0.6
 pycparser==2.21
 pydot==1.4.2
 pyparsing==3.0.9
+pytesseract==0.3.10
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
