--- a/requirements.txt
+++ b/requirements.txt
@@ -6,32 +6,40 @@ cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+clip @ git+https://github.com/openai/CLIP.git@a9b1bf5920416aaeaec965c25dd9e8f98c864f16
 cloudpickle==2.2.1
 cmake==3.26.3
 contourpy==1.0.7
 cryptography==40.0.2
 cycler==0.11.0
 detectron2 @ git+https://github.com/facebookresearch/detectron2.git@4aca4bdaa9ad48b8e91d7520e0d0815bb8ca0fb1
+easyocr==1.7.0
 filelock==3.12.0
 fonttools==4.39.3
+fsspec==2023.6.0
+ftfy==6.1.1
 future==0.18.3
 fvcore==0.1.3.post20210317
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
 grpcio==1.54.0
+huggingface-hub==0.15.1
 idna==3.4
+imageio==2.31.1
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
 iopath==0.1.10
 Jinja2==3.1.2
 kiwisolver==1.4.4
 layoutparser==0.3.4
+lazy_loader==0.2
 lit==16.0.2
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 mpmath==1.3.0
 networkx==3.1
+ninja==1.11.1
 numpy==1.24.3
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
@@ -47,6 +55,7 @@ nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
 omegaconf==2.3.0
 opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 packaging==23.1
 pandas==2.0.1
 pdf2image==1.16.3
@@ -57,19 +66,27 @@ portalocker==2.7.0
 protobuf==4.22.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyclipper==1.3.0.post4
 pycocotools==2.0.6
 pycparser==2.21
 pydot==1.4.2
 pyparsing==3.0.9
+pypdf==3.11.0
+PyPDF2==3.0.1
 pytesseract==0.3.10
+python-bidi==0.4.2
 python-dateutil==2.8.2
 pytz==2023.3
+PyWavelets==1.4.1
 PyYAML==6.0
+regex==2023.6.3
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
+safetensors==0.3.1
+scikit-image==0.21.0
 scipy==1.10.1
-six==1.16.0
+shapely==2.0.1
 soupsieve==2.4.1
 sympy==1.11.1
 tabulate==0.9.0
@@ -77,15 +94,18 @@ tensorboard==2.12.2
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 termcolor==2.3.0
+tifffile==2023.4.12
+tokenizers==0.13.3
 torch==2.0.0
 torchvision==0.15.1
 tqdm==4.65.0
+transformers==4.30.1
 triton==2.0.0
-typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
 uuid==1.30
 Wand==0.6.11
+wcwidth==0.2.6
 Werkzeug==2.3.0
 yacs==0.1.8
 zipp==3.15.0
